--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </ul>
 </nav>
 <ul class="header-contact list">
-<li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-<li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+<li><a href="mailto:info@devstudio.com" class="header-address link">info@devstudio.com</a></li>
+<li><a href="tel:+380961111111" class="header-address link">+38 096 111 11 11</a></li>
 </ul>
 </header>
 
@@ -94,8 +94,8 @@
     <address class="footer-contact">
     <ul class="footer-list list">
         <li class="contact-items"><a href="https://goo.gl/maps/K9hhwSCRKdNihnc36" class="footer-address link">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li class="contact-items"><a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a></li>
-        <li class="contact-items"><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a></li>
+        <li class="contact-items"><a href="mailto:info@devstudio.com" class="foot-address link">info@devstudio.com</a></li>
+        <li class="contact-items"><a href="tel:+380961111111" class="foot-address link">+38 096 111 11 11</a></li>
     </ul>
     </address>
 </footer>
