--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
         <link  rel="stylesheet" href="./css/styles.css">
-        <title>Студія</title>
+        <title>Портфоліо</title>
     </head>
     <body>
     
@@ -22,14 +22,14 @@
         </ul>
     </nav>
     <ul class="header-contact list">
-    <li><a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a></li>
-    <li><a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com" class="header-address link">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111" class="header-address link">+38 096 111 11 11</a></li>
     </ul>
     </header>
 
 <main>
-<section class="portfolio-btn">
-    <h1 class="portfolio-title visually-hidden">Фільтр готових проєктів</h1>
+<section class="portfolio">
+    <h1 class="portfolio-title visually-hidden">Наші роботи</h1>
     <ul class="portfolio-list list">
         <li><button type="button" class="portfolio-filter">Усі</button></li>
         <li><button type="button" class="portfolio-filter">Веб-сайти</button></li>
@@ -37,54 +37,51 @@
         <li><button type="button" class="portfolio-filter">Дизайн</button></li>
         <li><button type="button" class="portfolio-filter">Маркетинг</button></li>
     </ul>
-</section>
-
-<section class="examples">
-    <h2 class="examples-title visually-hidden">Наші роботи</h2>
+    
     <ul class="examples-list list">
         <li>
             <img src="./images/portfolio1.jpg" alt="Веб-сайт проекту Технокряк" width="370" height="294">
-            <h3 class="examples-title">Технокряк</h3>
+            <h2 class="examples-title">Технокряк</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
             <img src="./images/portfolio2.jpg" alt="Дизайн постера New Orlean vs Golden Star" width="370" height="294">
-            <h3 class="examples-title">Постер New Orlean vs Golden Star</h3>
+            <h2 class="examples-title">Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
         </li>
         <li>
             <img src="./images/portfolio3.jpg" alt="Додаток ресторану Seafood" width="370" height="294">
-            <h3 class="examples-title">Ресторан Seafood</h3>
+            <h2 class="examples-title">Ресторан Seafood</h2>
             <p>Додаток</p>
         </li>
         <li>
             <img src="./images/portfolio4.jpg" alt="Маркетинг проєкту Prime" width="370" height="294">
-            <h3 class="examples-title">Проєкт Prime</h3>
+            <h2 class="examples-title">Проєкт Prime</h2>
             <p>Маркетинг</p>
         </li>
         <li>
             <img src="./images/portfolio5.jpg" alt="Додаток проєкту Boxes" width="370" height="294">
-            <h3 class="examples-title">Проєкт Boxes</h3>
+            <h2 class="examples-title">Проєкт Boxes</h2>
             <p>Додаток</p>
         </li>
         <li>
             <img src="./images/portfolio6.jpg" alt="Веб-сайт Inspiration has no Borders" width="370" height="294">
-            <h3 class="examples-title">Inspiration has no Borders</h3>
+            <h2 class="examples-title">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
         </li>
         <li>
             <img src="./images/portfolio7.jpg" alt="Дизайн видання Limited Edition" width="370" height="294">
-            <h3 class="examples-title">Видання Limited Edition</h3>
+            <h2 class="examples-title">Видання Limited Edition</h2>
             <p>Дизайн</p>
         </li>
         <li>
             <img src="./images/portfolio8.jpg" alt="Маркетинг проєкту LAB" width="370" height="294">
-            <h3 class="examples-title">Проєкт LAB</h3>
+            <h2 class="examples-title">Проєкт LAB</h2>
             <p>Маркетинг</p>
         </li>
         <li>
             <img src="./images/portfolio9.jpg" alt="Додаток Growing Business" width="370" height="294">
-            <h3 class="examples-title">Growing Business</h3>
+            <h2 class="examples-title">Growing Business</h2>
             <p>Додаток</p>
         </li>
     </ul>
@@ -97,8 +94,8 @@
     <address class="footer-contact">
     <ul class="footer-list list">
         <li class="contact-items"><a href="https://goo.gl/maps/K9hhwSCRKdNihnc36" class="footer-address link">м. Київ, пр-т Лесі Українки, 26</a></li>
-        <li class="contact-items"><a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a></li>
-        <li class="contact-items"><a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a></li>
+        <li class="contact-items"><a href="mailto:info@devstudio.com" class="foot-address link">info@devstudio.com</a></li>
+        <li class="contact-items"><a href="tel:+380961111111" class="foot-address link">+38 096 111 11 11</a></li>
     </ul>
     </address>
 </footer>
